k8/nexus-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-nexus-repository-manager 
            port:
              number: 8081
        backend:
          service:
            name: nexus-nexus-repository-manager 
            port:
              number: 8082
        backend:
          service:
            name: nexus-nexus-repository-manager 
            port:
              number: 8083
